# toril

./: .gitignore  BRAND.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  app.html  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: CNAME  index.html  robots.txt  sitemap.xml
src/: ipc.ts  main.ts  sanitize.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/fsatomic/: Cargo.toml
src-tauri/crates/fsatomic/src/: lib.rs
src-tauri/crates/imgasset/: Cargo.toml
src-tauri/crates/imgasset/src/: lib.rs
src-tauri/crates/mdhtml/: Cargo.toml
src-tauri/crates/mdhtml/src/: lib.rs
src-tauri/crates/mdrtf/: Cargo.toml
src-tauri/crates/mdrtf/src/: lib.rs
src-tauri/crates/vaultscan/: Cargo.toml
src-tauri/crates/vaultscan/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs  settings.rs
src-tauri/src/commands/: export.rs  files.rs  images.rs  mod.rs  workspace.rs
src/editor/: html-constructs.ts  html-serializer.ts  milkdown.ts  serializer.ts
src/export/: html.ts
src/ui/: search.ts  sidebar.ts  statusbar.ts  tabs.ts  theme.ts  toolbar.ts
tests/: export.test.ts  html-roundtrip.test.ts  roundtrip.test.ts  search.test.ts  security.test.ts  statusbar.test.ts  tabs.test.ts  theme.test.ts  toolbar.test.ts
