[package]
name = "toril-app"
version = "0.1.0"
description = "Toril — a WYSIWYG markdown editor"
authors = ["Toril contributors"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependency pinning (CLAUDE.md §2): the committed Cargo.lock pins exact
# versions; the ranges below are upgrade bounds, not what actually builds.

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (a Windows
# linker constraint). See https://github.com/rust-lang/cargo/issues/8519
name = "toril_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
